# static_haskell

./: Dockerfile  README  mkDocker.sh
egProject/: LICENSE  Makefile  README.md  egProject-exe.sh  egProject.cabal  stack.yaml
egProject/app/: Main.hs
